# fie

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  standard_project_settings.cmake
src/: compile_commands.json  main.cpp
src/.cache/clangd/index/: main.cpp.D1686B8B9F63750F.idx
